// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Toolbar /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="k"
    >
      Filter
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={false}
        id="k"
        onBlur={undefined}
        placeholder=""
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={false}
      href=""
      icon={true}
      onClick={undefined}
      type="submit"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`renders <Toolbar actionLabel /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="w"
    >
      Filter
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={false}
        id="w"
        onBlur={undefined}
        placeholder=""
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={false}
      href=""
      icon={true}
      onClick={undefined}
      type="submit"
    >
      Action label
    </button>
  </div>
</div>
`;

exports[`renders <Toolbar actionable /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  cursor: not-allowed;
  pointer-events: none;
  color: rgb(216,216,216);
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(216,216,216);
}

.c8:hover {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-color: rgb(250,250,250);
  border-color: rgb(250,250,250);
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="z"
    >
      Filter
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={false}
        id="z"
        onBlur={undefined}
        placeholder=""
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={true}
      href=""
      icon={true}
      onClick={undefined}
      type="submit"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`renders <Toolbar onActionClick /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="C"
    >
      Filter
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={false}
        id="C"
        onBlur={undefined}
        placeholder=""
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={false}
      href=""
      icon={true}
      onClick={[Function]}
      type="button"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`renders <Toolbar searchLabel /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="n"
    >
      Search label
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={false}
        id="n"
        onBlur={undefined}
        placeholder=""
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={false}
      href=""
      icon={true}
      onClick={undefined}
      type="submit"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`renders <Toolbar searchPlaceholder /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="q"
    >
      Filter
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={false}
        id="q"
        onBlur={undefined}
        placeholder="Search placeholder"
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={false}
      href=""
      icon={true}
      onClick={undefined}
      type="submit"
    >
      Create
    </button>
  </div>
</div>
`;

exports[`renders <Toolbar searchable /> without throwing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  margin-top: 0.1875rem;
}

.c10 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c10 + button,
.c10 + a {
  margin-left: 0.375rem;
}

.c9 {
  display: inline-block;
}

.c9 + button,
.c9 + a {
  margin-left: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 100%;
}

.c8:focus {
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c8:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8 svg + span {
  margin-left: 0.75rem;
}

.c8 svg {
  max-height: 1.125rem;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-bottom: 0.1875rem;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c6 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 1.3125rem;
}

.c1 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
  float: right;
}

.c4 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 0.75rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(250,250,250);
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
  max-width: 22.1875rem;
  text-overflow: ellipsis;
}

.c4:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:invalid {
  box-shadow: none;
}

.c4::-webkit-input-placeholder {
  color: rgb(216,216,216);
}

.c4::-moz-placeholder {
  color: rgb(216,216,216);
}

.c4:-ms-input-placeholder {
  color: rgb(216,216,216);
}

.c4:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c4:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c4:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

<div
  className="c0"
>
  <div
    className="baseline-jVaZNU kXgQxt c1"
    name="filter"
    role="group"
    style={undefined}
  >
    <label
      className="c2"
      htmlFor="t"
    >
      Filter
    </label>
    <div
      className="c3"
    >
      <input
        className="c4"
        disabled={true}
        id="t"
        onBlur={undefined}
        placeholder=""
      />
    </div>
  </div>
  <div
    className="baseline-jVaZNU kXgQxt c5"
    role="group"
    style={undefined}
  >
    <div
      className="c6 c7"
      height="1.3125rem"
    />
    <button
      className="c8 c9 c10"
      disabled={false}
      href=""
      icon={true}
      onClick={undefined}
      type="submit"
    >
      Create
    </button>
  </div>
</div>
`;
